<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_page_background"
    android:orientation="vertical">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/topLevelFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/topLevelNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bus_card_surface"
        android:minHeight="64dp"
        app:itemActiveIndicatorStyle="@style/TopLevelNavigation.ActiveIndicator"
        app:itemIconSize="24dp"
        app:itemIconTint="@color/top_level_navigation_item_tint"
        app:itemPaddingBottom="6dp"
        app:itemPaddingTop="6dp"
        app:itemTextAppearanceActive="@style/TopLevelNavigation.Text.Active"
        app:itemTextAppearanceActiveBoldEnabled="false"
        app:itemTextAppearanceInactive="@style/TopLevelNavigation.Text.Inactive"
        app:itemTextColor="@color/top_level_navigation_item_tint"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/top_level_navigation" />
</LinearLayout>
